Compiler/tests/good/Structs/01_structs.rs
struct user{
    name: String,
    age: i8
}


fn main(){
    let u1 = user{
        name: String::from("oooo"),
        age: 12
    };

    println!("{}", test.0);
    println!("{}", u1.name);
}