Compiler/tests/bad/Variables/03_variable.rs
fn main(){
    let x : bool = 23;
}
